# algs

./: .gitignore
public/1_solution3/: README.md
public/2.analysis/: README.md
public/2_analysis/: README.md
public/3_search/3.1_sequential_search/: README.md
public/3_search/3.2_binary_search/: README.md
resources/1_connectivity_task/: 1_connectivity_task.drawio
resources/3_search/: search.drawio
src/0_common/C++/: collections_helper.h
src/1_connectivity_task/C++/: 1.1_fast_search.cpp  1.2_fast_union.cpp  1.3_weighted_fast_union.cpp  CMakeLists.txt
src/1_connectivity_task/Python/: 1.1_fast_search.py  1.2_fast_union.py  1.3_weighted_fast_union.py
src/3_search/C++/: 3.1_sequential_search.cpp  3.2_binary_search.cpp  CMakeLists.txt
src/3_search/Python/: 3.1_sequential_search.py  3.2_binary_search.py
src/4_elementary_data_structs/C++/: 4.1_sieve_of_Eratosthenes.cpp  4.2_Bernoulli_trials.cpp  4.3_josephus.cpp  4.4_list_reverse.cpp  4.5_list_insert_sort.cpp  4.6_point_distance_count.cpp  CMakeLists.txt
src/4_elementary_data_structs/Python/: 4.1_sieve_of_Eratosthenes.py  4.2_Bernoulli_trials.py
src/5_recursion/C++/: 5.1_binary_number.cpp  5.2_hanoi.cpp  5.3_fibonacci_bag.cpp  5.4_trees.cpp  CMakeLists.txt
src/6_2powered_sort/C++/: 6.1_selection.cpp  6.2_insertion.cpp  6.3_bubble.cpp  6.4_shell.cpp  6.5_list_sorts.cpp  6.6_key_indexed_counting.cpp  6.7_in_place_rearrangement.cpp  CMakeLists.txt
src/6_sort/C++/: 6.1_selection.cpp  6.2_insertion.cpp  6.3_bubble.cpp  6.4_shell.cpp  CMakeLists.txt  collections_helper.h  readme.md
src/7_quick_sort/C++/: 7.1_basic_quick_sort.cpp  7.2_hybrid_sort.cpp  7.3_median_hybrid_sort.cpp  7.4_median_stack_hybrid_sort.cpp  7.5_three_way_partition.cpp
src/8_merge_sort/C++/: 8.1_basic_merge.cpp  8.2_abstract_exchange_merge.cpp  8.3_top_down_merge_sort.cpp  8.4_merge_sort_no_copy.cpp  8.5_down_up_merge_sort.cpp  8.6_list_merge_sort.cpp
src/9_prior_queue_heap_sort/C++/: 9.1_heap_prior_queue.cpp  9.2_heap_sort.cpp  9.3_.cpp  9.3_binomial_prior_queue.cpp  heap_functions.h
